--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@ family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0
                 with a passion for <br>
                 creating beautiful and responsive websites. </p>
                 <br>
-            <a href="ASSETS/GIRL-LAPTOP.png" download="" class="CV">Download CV</a>
+            <a href="ASSETS/Eman.Barakat.CV.React.pdf" download="" class="CV">Download CV</a>
         </div>
         <div>
             <p>consule log() JAVASCRIPT [html] <br><br>
